NM-4861 add/remove TXT,A,CNAME,SPF,MX records
add/remove alias record pointing to default balancer

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -438,6 +438,12 @@ en:
           record_name: Record name
           record_type: Type
           record_values: Values
+      resource_records:
+        new:
+          header: 'Add new DNS record'
+        form:
+          create_record: 'Add DNS Record'
+          please_wait: Saving...
       hidden_controls:
         name: "Name"
         type: "Type"
