NM-4984 free switch label correction

--- a/config/locales/pricing.en.yml
+++ b/config/locales/pricing.en.yml
@@ -23,6 +23,7 @@ en:
       deposit_amount: 'Deposit amount'
       enable: 'Enable deposits'
     price: 'Price'
+    free: 'Free'
     required: 'required'
     event:
       one: 'event'
