--- a/config/locales/errors.en.yml
+++ b/config/locales/errors.en.yml
@@ -102,6 +102,12 @@ en:
               too_short: 'You need to add at least one photo to your project'
             topics:
               too_short: 'You need to select at least one topic for your project'
+
+        comment:
+          membership: 'You need to be a member to comment group activity'
+
+        user_status_update:
+          membership: 'You need to be a member to update group status'
   errors:
     messages:
       free: "must be free if no prices are provided"
