IDM-87 update flash notice after creating group

--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -526,6 +526,8 @@ en:
         updated: 'Payout information has been updated.'
         not_configured: 'Payment Gateway is not configured correctly'
         successfully_configured: 'Your PayPal onfiguration is complete.'
+      groups:
+        added: "Great, your new %{bookable_noun} group has been added!"
     marketplace_sessions:
       wrong_password: 'Wrong password!'
     partner_inquiries:
