--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -561,6 +561,7 @@ en:
       credit_card_will_be_charged: "Your credit card will be charged when your reservation is confirmed by the host."
       invalid_operation:  "Not a valid reservation operation."
       booking_failed:  "Your payment was canceled."
+      payment_failed:  "Your payment was canceled."
       reservation_cancelled: "You have cancelled your reservation."
       reservation_not_cancellable: "This reservation can not be canceled anymore."
       reservation_made: "Your reservation has been made! %{message}"
