NM-5066 fix disabled booking js + NM-5065 fix hash + NM-5075 required fields + NM-5080 additional charges for subscription + NM-5073 remove product analytics

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1518,6 +1518,7 @@ en:
       reservation_state: "Reservation state: "
       payment_state: "Payment state: "
       payment_method: "Payment method: "
+      payment_missing: "Payment missing"
       unconfirmed: 'Unconfirmed'
       confirmed: 'Confirmed'
       archived: 'Archived'
