--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2046,6 +2046,7 @@ en:
         description: 'Description'
 
       verified: 'Verified'
+      not_verified: "Not verified"
 
     buttons:
       cta: 'Add new'
