NM-5042 liquified dashboard/reservation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1551,6 +1551,7 @@ en:
         nonce: "PayPal"
         remote: "Fetch"
         free: "None"
+        pending: 'Pending'
       delivery:
         pick_up: 'Pick up'
         delivery: 'Delivery'
