--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -262,6 +262,7 @@ en:
         canceled: 'Order has been canceled.'
         resumed: 'Order has been resumed.'
         approved: 'Order has been approved.'
+        archived: 'Offer has been closed.'
         error_update: 'Order has not been updated.'
       companies:
         company_updated: "Great, your company's details have been updated."
