NM-5135 Prevent submitting form multiple times

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -132,6 +132,7 @@ en:
     no_options: 'No options'
     unexpected_error_occurred: "An unexpected error occurred."
     session_stale: "The session is stale. Please log back in."
+    saving: "Saving..."
   transactable_types:
     locations:
       listings:
