NM-5255 change shipping_profile name if needed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -114,6 +114,7 @@ en:
     required: 'required'
     show: 'Show'
     none: "None"
+    customized: ' - customized'
     day:
       one: "day"
       other: "days"
