NM-5243 order tabs management

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1271,6 +1271,8 @@ en:
         confirmed: "Confirmed"
         completed: "Completed"
         archived: "Archived"
+        not_archived: "Active"
+        overdue: "Overdue"
       columns:
         listing: "Listing"
         total: "Total"
