--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2582,7 +2582,7 @@ en:
       book_it_out_quantity: "Quantity for Book It Out option should equal maximal available quantity."
       book_it_out_not_available: 'Book It Out option is no longer available'
       exclusive_price_not_available: 'Exclusive Price option is no longer available'
-      no_delivery_options: 'There are no delivery options available.'
+      no_delivery_options: 'There are no delivery options available for provided address.'
       internal_payment: 'Unfortunately we have some internal issues with processing your credit card. Please try again later.'
       date_in_past: 'You cannot book a date in past.'
       invalid_date: 'Invalid date.'
