--- a/config/locales/errors.en.yml
+++ b/config/locales/errors.en.yml
@@ -48,6 +48,7 @@ en:
               payment_invalid: "Payment details are invalid!"
               total_amount_changed: "Looks like the total price of this reservation has changed. Please verify all prices."
         order:
+          wrong_address: 'Unable to calculate shipping cost as provided address is incorrect'
           transactable_quantity: "Exceeded quantity for %{transactable_name}, please adjust listing quantity to confirm that order."
           maximim_quantity: "Exceeded quantity for the product, please adjust the quantity to add this product to cart."
         merchant_account:
