--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -267,6 +267,9 @@ en:
         approved: 'Order has been approved.'
         archived: 'Offer has been closed.'
         error_update: 'Order has not been updated.'
+      order_items:
+        updated: 'Order item has been updated.'
+        approved: 'Order item has been approved.'
       companies:
         company_updated: "Great, your company's details have been updated."
         white_label_updated: "Great, white-label details have been updated."
