--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -270,6 +270,7 @@ en:
       order_items:
         updated: 'Order item has been updated.'
         approved: 'Order item has been approved.'
+        approve_failed: 'Order item could not be approved.'
       companies:
         company_updated: "Great, your company's details have been updated."
         white_label_updated: "Great, white-label details have been updated."
