NM-5298 UoT Time tracking

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1286,11 +1286,13 @@ en:
       stripe: 'Credit Cards'
       in_gateway: '%{payment_gateway} Credit Cards'
     order_items:
-      back_to_projects: "< Back to Projects In Progress"
+      back_to_projects: "Go Back to Projects In Progress"
+      back_to_projects_html: "Go Back<span class='hidden-xs'> to Projects In Progress</span>"
       total: "Total"
       send_message: 'Send Message'
     orders:
       track_time_and_expenses: Track Time and Expenses
+      track_time_and_expenses_html: 'Track Time<span class="hidden-xs"> and Expenses</span>'
       not_collaborator: 'Only invited users can make an offer'
       payment_missing: "Missing"
       details: "Details"
