NM-5377 force to fill in space wizard for clients

--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -13,6 +13,7 @@ en:
         unknown: "We cannot authorize you."
     authorizations:
       not_authorized: "Sorry, you do not have permission to view that page."
+      not_filled_form: "Please complete your profile first."
     communications:
       validation_code: "Validation code: %{validation_code}"
       phone_number_disconnected: "Phone number successfully disconnected."
