--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -272,6 +272,8 @@ en:
         updated: 'Order item has been updated.'
         approved: 'Order item has been approved.'
         approve_failed: 'Order item could not be approved.'
+        rejected: 'Order item has been rejected'
+        reject_failed: 'Order item could not be rejected'
       companies:
         company_updated: "Great, your company's details have been updated."
         white_label_updated: "Great, white-label details have been updated."
