--- a/config/locales/flash_messages.en.yml
+++ b/config/locales/flash_messages.en.yml
@@ -274,6 +274,8 @@ en:
         approve_failed: 'Order item could not be approved.'
         rejected: 'Order item has been rejected'
         reject_failed: 'Order item could not be rejected'
+        can_not_edit_accepted_order_item: "You can\'t edit accepted order item."
+        recently_edited: "Looks like total amount of this order item has changed please verify and reaccept."
       companies:
         company_updated: "Great, your company's details have been updated."
         white_label_updated: "Great, white-label details have been updated."
