NM-5451 fix 500 after failed payment

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -131,6 +131,7 @@ en:
     generic_lessor_term: "host"
     default: "Default"
     approve: 'Approve'
+    update_credit_card: 'Update Credit Card'
     reject: 'Reject'
     no_options: 'No options'
     unexpected_error_occurred: "An unexpected error occurred."
