NM-5164 Add wish list items liquid view for lister and enquirer

--- a/lib/tasks/litvault/translations/en.yml
+++ b/lib/tasks/litvault/translations/en.yml
@@ -129,6 +129,20 @@ en:
             list_your_thing: 'Become a Referring Lawyer'
 
     wish_lists:
+        enquirer:
+            name: 'Favorite Handling Lawyers'
+        lister:
+            name: 'Favorite Cases'
         buttons:
             selected_state: "Favorite"
             unselected_state: "Favorite"
+            invite_to_case: "Invite to Case"
+            bulk_invite_to_case: "Bulk Invite To Case"
+        sort:
+            label: "Sort By"
+            options:
+                newest: 'Newest'
+                oldest: 'Oldest'
+                alphabetical: 'Alphabetical'
+                individual_cases: 'Individual Cases'
+                group_cases: 'Group Cases'
