--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1307,6 +1307,7 @@ en:
         archived: "Archived"
         not_archived: "Active"
         overdued: "Overdue"
+        draft: "Draft"
       columns:
         listing: "Listing"
         total: "Total"
@@ -2621,8 +2622,10 @@ en:
     delivery_hint: 'Prices include return delivery'
     select_dates: 'Select the date and time'
     buttons:
+      draft: "Save as draft"
       request: 'Request Booking'
       continue: 'Continue'
+      cancel_draft: "Cancel draft"
 
     disabled_buttons:
       request: 'Booking...'
