--- a/lib/tasks/volte/translations/en.yml
+++ b/lib/tasks/volte/translations/en.yml
@@ -1,1 +1,11 @@
 en:
+  pricing:
+    unavailability:
+      info: 'Add dates when item is not available.'
+    price_unit:
+      person: '/ item'
+      person_unit: '/ item / %{unit}'
+  simple_form:
+    labels:
+      transactable:
+        name: 'Item Name'
