NM-3426 Currency formatting options
* New settings and renamed methods in currency helper
* Renamed references to older methods

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -444,6 +444,7 @@ en:
           replacement_text: "Replacement Text"
           ignore_case: "Ignore case"
         support: "Support"
+        currency_options: "Currency Options"
       payments:
         payment_gateways:
           new: "New Payment Gateway"
