--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2867,6 +2867,7 @@ en:
     collaborator: 'Collaborator'
     add_collaborator: 'Add collaborator'
     collaboration_cancelled: "Collaboration request has been cancelled."
+    collaborator_cancelled: "You have declined collaboration in this project."
     user_added_collaborator: "%{user_link} added a new collaborator to the %{project_link} project"
     collaboration_accepted: "Collaboration request has been approved."
     cant_remove_collaborator: "You can't remove user from this project"
