--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -78,6 +78,15 @@ en:
   day:
     one: "1 day"
     other: "%{count} days"
+  week:
+    short:
+      monday: 'M'
+      tuesday: 'T'
+      wednesday: 'W'
+      thursday: 'TH'
+      friday: 'F'
+      saturday: 'SA'
+      sunday: 'SU'
   night:
     one: "1 night"
     other: "%{count} nights"
