--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1825,7 +1825,7 @@ en:
         order_placed: "Order placed"
         order: "Order #"
         order_id: 'Order #%{id}'
-        order_placed_with_date: "Order placed: %{date}"
+        order_placed_with_date: "Review posted on: %{date}"
         overall: 'Overall:'
         details: 'Details'
         view_order_details: "View Order Details"
