--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2278,10 +2278,10 @@ en:
     manually_confirm: "This %{lessor} manually confirms all bookings."
     paypal_and_cc_charge_after_confirmation: "Your will not be charged until the booking is confirmed."
     cancellation_time: "You have up to %{time} hours before the booking takes place to cancel."
-    no_cancellation_time: "You can cancel before the first day and you will receive a full refund except for service fee."
+    no_cancellation_time: "You can cancel before the first day."
     cancellation_fee: "The penalty fee for cancelling is %{fee}%. Service fee is not refunded."
     hours_cancellation_fee: "The penalty fee for cancelling later is equivalent to %{fee} times hourly rate."
-    no_cancellation_fee: "You will get full refund except of service fee."
+    no_cancellation_fee: "You will get full refund except for service fee."
     no_bookings_html: "You don't have any %{type} bookings. <a href='/search'>Find %{bookable_nouns} near you!</a>"
     no_tickets: "There are no tickets to show."
     upcoming: 'upcoming'
