--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -427,6 +427,7 @@ en:
         update_lock: 'Update Lock'
         update_tax: 'Save'
         user_authorization: 'User Authorization'
+        api_settings: "API Settings"
         basic_configuration: 'Basic Configuration'
         basic_configuration_section:
           placeholder_marketplace_name: 'Your marketplace name'
